--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^4.0.2",
     "morgan": "^1.5.2",
     "passport": "^0.2.1",
+    "passport-facebook": "^2.0.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0"
   },
