added blog model, one of its routes and one test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "blog",
   "main": "app.js",
   "scripts": {
-    "test": "mocha server/tests/server.js",
+    "test": "mocha server/tests",
     "start": "node server/app.js"
   },
   "author": "",
