--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.12.3",
     "fs": "0.0.2",
     "jwt-simple": "^0.3.0",
+    "lodash": "^3.10.0",
     "mongoose": "^4.0.2",
     "morgan": "^1.5.2",
     "passport": "^0.2.1",
